# nsf-presenter-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  gui.rs  main.rs  video_builder.rs
src/emulator/: config.rs  emulator.rs  m3u_searcher.rs  mod.rs  nsf.rs  nsfeparser.rs
src/emulator/background/: imagebackground.rs  mod.rs  mtvideobackground.rs
src/gui/: mod.rs  render_thread.rs
src/gui/slint/: channel-config.slint  main.slint  module-metadata.slint
src/renderer/: mod.rs  options.rs
src/video_builder/: encoding.rs  ffmpeg_hacks.rs  mod.rs  vb_unwrap.rs  video_options.rs
src/video_builder/backgrounds/: debug_bg.rs  image_bg.rs  video_bg.rs
