[package]
name = "nsf-presenter-rs"
version = "0.3.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
rusticnes-core = { path = "external/rusticnes-core" }
rusticnes-ui-common = { path = "external/rusticnes-ui-common" }
ffmpeg-next = "6.0.0"
ffmpeg-sys-next = "6.0.1"
clap = "4.2.1"
indicatif = "0.17.3"
image = "0.19.0"
build-time = "0.1.2"
slint = "1.1.0"
native-dialog = "0.6.3"

[build-dependencies]
slint-build = "1.1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[patch."https://github.com/zeta0134/rusticnes-core"]
rusticnes-core = { path = "external/rusticnes-core" }

[patch."https://github.com/zeta0134/rusticnes-ui-common"]
rusticnes-ui-common = { path = "external/rusticnes-ui-common" }
