[package]
name = "nsf-presenter-rs"
version = "0.6.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
rusticnes-core = { path = "external/rusticnes-core" }
rusticnes-ui-common = { path = "external/rusticnes-ui-common" }
ffmpeg-next = "6.1.0"
ffmpeg-sys-next = "6.1.0"
clap = "4.2.1"
indicatif = "0.17.7"
image = "0.19.0"
build-time = "0.1.3"
slint = "1.3.2"
native-dialog = "0.6.3"
encoding_rs = "0.8.32"
glob = "0.3.1"
csscolorparser = "0.6.2"
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"

[build-dependencies]
slint-build = "1.3.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[patch."https://github.com/zeta0134/rusticnes-core"]
rusticnes-core = { path = "external/rusticnes-core" }

[patch."https://github.com/zeta0134/rusticnes-ui-common"]
rusticnes-ui-common = { path = "external/rusticnes-ui-common" }
